--- a/index.html
+++ b/index.html
@@ -3,9 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Сорочка для захисника</title>
   </head>
   <body>
-    <h1>this is an example project</h1>
+    <h1>Сорочка для захисника</h1>
+    <video width="640" height="360" controls>
+    <source src="./video/461256529_8314091368667264_6961708053446526009_n.mp4" type="video/mp4">
+    Ваш браузер не підтримує тег <video>.
+    </video>
   </body>
 </html>
